# whos-a-wolf

./: .gitignore  AGENTS.md  README.md  pyproject.toml  truth_cache.json
.github/workflows/: deploy.yml
analysis/: analyze.py  check_diversity.py  generate_puzzles.py
app/: index.html  package-lock.json  package.json  ui-specs.md  vite.config.js
app/public/: manifest.webmanifest
app/public/images/: README.md
app/src/: App.svelte  app.css  main.js
app/src/components/: NewGameModal.svelte  ShareModal.svelte  VillagerCard.svelte
app/src/lib/: characters.js  i18n.js  puzzle.js  statements.js
app/src/lib/locales/: en.json  fr.json
app/src/lib/puzzles/: 4_villagers.txt  5_villagers.txt  6_villagers.txt
asset_generation/: .gitignore  README.md  character_config.yaml  extract_assets.py  generate_characters.py  generate_characters_with_dalle.py  generate_from_spec.py  imgspec.md  pyproject.toml  spec.md
puzzle_generation/: .gitignore  pyproject.toml
puzzle_generation/scripts/: README.md  Readme.md  analyze.py  generate_puzzles.py  generate_single_puzzle.py
puzzle_generation/specs/: ai_model_testing.md  analysis_specs.md  gpt_spec.md  specs.md  texts.md
puzzle_generation/src/: generator.py  models.py  prompt.md  render.py  statements.py  truth_cache.py  utils.py
puzzle_generation/test/: __init__.py  test_statements.py  test_symmetrical_relationships.py
specs/: analysis_specs.md  gpt_analysis.md  gpt_spec.md  specs.md  technical_specs.md
src/: __init__.py  __main__.py  claim_factory.py  claims.py  generator.py  models.py  prompt.md  render.py  solver.py  statements.py  statements_factory.py  truth_cache.py
test/: __init__.py  test_statements.py  test_symmetrical_relationships.py  test_uniqueness.py
