[project]
name = "werewolf"
version = "0.1.0"
description = "A werewolf puzzle solver and generator"
requires-python = ">=3.10"
dependencies = [
    "z3-solver",
]

[project.scripts]
werewolf = "src.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []

