[project]
name = "werewolf-asset-generation"
version = "0.1.0"
description = "OpenAI-powered character image generation for werewolf game"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "google-genai",
    "pyyaml",
    "pillow",
    "requests",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asset_generation"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

