[project]
name = "who-is-a-wolf"
version = "0.1.0"
description = "A who-is-a-liar puzzle solver and generator"
requires-python = ">=3.10"
dependencies = [
    "z3-solver",
    "tqdm",
    "matplotlib"
]

[project.scripts]
werewolf = "src.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
analysis = [
    "matplotlib",
    "tqdm",
]

